--- a/index.html
+++ b/index.html
@@ -336,6 +336,9 @@
                 <div class="toggle-section toggle-section__donate">
 
                     <div class="toggle-section__head__container">
+                        <p class="toggle-section__head__container__title">
+                            допомога ПРОЕКТУ
+                        </p>
                         <div class="toggle-section-head">
                             <a href="#" data-toggle-page=".toggle-section__card" class="toggle-section-head__item _active-page">
                                 карткою
@@ -490,7 +493,8 @@
 
     </div>
 </section>
-<section class="container">
+
+<section class="container container__small">
     <div class="about rounded">
         <h2 class="rubric-head rubric-head_link"><a href="/about">Про фонд</a></h2>
 
@@ -571,7 +575,7 @@
         </div>
     </div>
 </section>
-<section class="container">
+<section class="container container__small">
     <div class="mission rounded">
         <h2 class="rubric-head">Напрямки діяльності</h2>
 
@@ -602,7 +606,7 @@
         </div>
     </div>
 </section>
-<section class="container">
+<section class="container container__medium">
 
     <div class="top-project-list">
         <div class="swiper swiper-top-projects">
@@ -1219,7 +1223,7 @@
         </div>
     </div>
 </section>
-<section class="container">
+<section class="container container__medium">
     <form class="subscribe-layout rounded" action="." method="post">
         <div class="subscribe-head">Підпишіться на розсилку новин</div>
         <div class="subscribe-input">
@@ -1230,7 +1234,7 @@
         </div>
     </form>
 </section>
-<section class="container">
+<section class="container container__medium">
 
     <div class="publication-layout rounded reviews__main__container reviews__white">
         <div class="publication-header sm-hidden"><h2 class="rubric-head">ЗМІ про нас</h2></div>
@@ -1358,7 +1362,7 @@
 
 </section>
 
-<section class="container">
+<section class="container container__medium">
     <div class="faq rounded">
         <div class="faq__titles">
             <div class="faq__head">
@@ -1820,7 +1824,7 @@
     </div>
 </section>
 
-<section class="container">
+<!-- <section class="container">
     <div class="faq-layout rounded">
         <div class="faq-head">
             <h2 class="rubric-head rubric-head_link"><a href="/faq">FAQ</a></h2>
@@ -1902,9 +1906,9 @@ Quia atque ipsam sed sed aut molestias eum impedit. Qui dolore quos. Veniam ut d
             <a href="/faq" class="btn btn_black">Більше питань</a>
         </div>
     </div>
-</section>
+</section> -->
 
-<section class="container">
+<section class="container container__medium">
     <div class="insta-box">
         <div class="swiper swiper-insta">
             <div class="swiper-wrapper">
@@ -1941,7 +1945,7 @@ Quia atque ipsam sed sed aut molestias eum impedit. Qui dolore quos. Veniam ut d
     </div>
 </section>
 
-<div class="container">
+<div class="container container__small">
     <footer class="footer">
         <div class="footer-logo">
             <a href="/" class="footer-logo-pic"><img src="./img/logo-white.svg" alt="Твоя опора"></a>
