--- a/parthner.html
+++ b/parthner.html
@@ -186,6 +186,9 @@
 </div>
 <section class="container">
     <div class="banner-gradient rounded banner-gradient__parthner">
+        <div class="banner-gradient__img">
+            <img src="./img/content/top-project/0-1270x735.jpg" alt="">
+        </div>
         <div class="banner-gradient__bg"></div>
         <div class="banner-gradient-text">
             <h3>
