--- a/profile.html
+++ b/profile.html
@@ -874,9 +874,9 @@
                                         ОСОБИСТА ІНФОРМАЦІЯ
                                     </h4>
 
-                                    <button type="submit" class="private-info__avatar avatar__origin">
+                                    <a href="#" class="private-info__avatar avatar__origin">
                                         <img src="./img/profile/img-avatar.png" alt="avatar">
-                                    </button>
+                                    </a>
 
                                     <p class="private-info__name">Petr Ivanov</p>
 
@@ -994,11 +994,11 @@
 
                                     </div>
 
-                                    <a href="#" class="private-info__edit">
+                                    <button type="submit" class="private-info__edit">
                                         <svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path fill-rule="evenodd" clip-rule="evenodd" d="M18.6446 1.8807L6.63496 13.9387L0.604248 7.88369L2.41613 6.06451L6.63496 10.3003L16.8327 0.0615234L18.6446 1.8807Z" fill="#EE2742"/>
                                         </svg>
-                                    </a>
+                                    </button>
                                 </form>
                                 
                             </div>
