--- a/index.html
+++ b/index.html
@@ -61,6 +61,19 @@
                     <button class="nav-search-btn" type="submit">Пошук</button>
                 </div>
             </form>
+            <form class="nav-subscribe" method="get" action="">
+                <div class="nav-search-box">
+                    <div class="nav-search-query">
+                        <input type="text" name="q" placeholder="email">
+                    </div>
+
+                    <button class="nav-search-btn" type="submit">
+                        <svg width="8" height="15" viewBox="0 0 8 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M0.827341 1.30631L7.19141 7.67017L0.827341 14.034" stroke="#fff" stroke-linecap="round"/>
+                        </svg>
+                    </button>
+                </div>
+            </form>
         </div>
         <div class="dropdown-nav-menu"><ul class="two-nav-list">
     <li class="two-nav-item hover-active">
@@ -211,7 +224,21 @@
 
 </div>
 
-<section class="container">
+<section class="container container__small container__breadcrumbs">
+    <nav class="yoast-breadcrumbs breadcrumbs">
+        <span>
+            <span>
+                <a href="№">Головна</a>
+                 / 
+                 <span>
+                    Звіти
+                </span>
+            </span>
+        </span>
+    </nav>
+</section>
+
+<section class="container container__small">
     <div class="banner-gradient rounded banner-gradient__zvity">
 
         <div class="banner-gradient__img">
@@ -494,7 +521,7 @@
 
 
 
-<div class="container">
+<div class="container container__big">
     <footer class="footer">
         <div class="footer-logo">
             <a href="/" class="footer-logo-pic"><img src="./img/logo-white.svg" alt="Твоя опора"></a>
